--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jaeger-idl"]
 	path = jaeger-idl
 	url = https://github.com/jaegertracing/jaeger-idl
+[submodule "opentelemetry-proto"]
+	path = opentelemetry-proto
+	url = https://github.com/open-telemetry/opentelemetry-proto
