Calculate coverage and push it to codecov
Signed-off-by: Bogdan Drutu <bogdandrutu@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,9 @@ jobs:
       - run:
           name: Test
           command: make test
+      - run:
+          name: Coverage tests
+          command: make test-with-cover
+      - run:
+          name: Coverage push
+          command: bash <(curl -s https://codecov.io/bash)
