Enable more linters, fix errors
Signed-off-by: Bogdan Drutu <bogdandrutu@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -99,6 +99,8 @@ linters:
   disable:
     - errcheck
   enable:
+    - depguard
+    - errorlint
     - exportloopref
     - gocritic
     - gofmt
@@ -108,7 +110,9 @@ linters:
     - misspell
     - revive
     - staticcheck
+    - tenv
     - unconvert
+    - unused
     - unparam
 
 issues:
