--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -98,3 +98,32 @@ jobs:
 
       - name: Test
         run: make test
+
+  benchmark:
+    runs-on: ubuntu-latest
+    needs: [setup]
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+
+      - name: Cache Go
+        id: module-cache
+        uses: actions/cache@v3
+        with:
+          path: /home/runner/go/pkg/mod
+          key: go-pkg-mod-${{ runner.os }}-${{ hashFiles('**/go.sum') }}
+
+      - name: Cache Tools
+        id: tool-cache
+        uses: actions/cache@v3
+        with:
+          path: /home/runner/go/bin
+          key: tools-${{ runner.os }}-${{ hashFiles('./internal/tools/go.mod') }}
+
+      - name: Benchmark
+        run: make benchmark
