--- a/.golangci.yml
+++ b/.golangci.yml
@@ -99,9 +99,8 @@ linters:
   disable:
     - errcheck
   enable:
-    - depguard
     - errorlint
-    - exportloopref
+    - copyloopvar
     - gocritic
     - gofmt
     - goimports
@@ -118,6 +117,12 @@ linters:
 issues:
   # Excluding configuration per-path, per-linter, per-text and per-source
   exclude-rules:
+    - linters:
+        - gosec
+      text: "G115"
+    - linters:
+        - staticcheck
+      text: "SA1019"
 
   # The list of ids of default excludes to include or disable. By default it's empty.
   # See the list of default excludes here https://golangci-lint.run/usage/configuration.
