--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,8 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
-jobs:
+env:
+  GO_VERSION: 1.24.6
 
+jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
@@ -17,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Cache Go
         id: module-cache
@@ -51,7 +53,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Cache Go
         id: module-cache
@@ -80,7 +82,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Cache Go
         id: module-cache
@@ -109,7 +111,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Cache Go
         id: module-cache
